[tool.poetry]
name = "qontainer-project"
version = "0.1.0"
description = "A Docker-based development environment for learning quantum computing with Qiskit"
authors = ["ymori1212"]
readme = "README.md"
keywords = ["qiskit", "docker", "quantum computing", "learning", "jupyter"]

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "0.46.3"
qiskit-aer = "0.13.3"
matplotlib = "^3.7.0"
notebook = "^7.0.0"
jupyter = "^1.0.0"
pylatexenc = "^2.10"
japanize-matplotlib = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"